environments/dev/apps/editorial-kustomization/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: editorial
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: editorial
        resources:
          limits:
            cpu: 1000m
            memory: 1Gi
          requests:
            cpu: 500m
            memory: 512Mi
